--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -8,7 +8,7 @@ However, NUMA systems may have serious performance issues if programs have one o
 
 First, some research may rely on programmers to manage memory allocations and task assignments explicitly~\cite{Zhang:2015:NGA:2688500.2688507, Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require large amount of human effort. Also, existing legacy systems cannot take advantage of such approaches, if without further investment.  
 
-Second, some researchers propose the method of migrating tasks or physical pages reactively, in order to achieve the better performance~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. The migration will be based on memory access patterns, or other hardware characteristics. However, some of these approaches are not architecture or OS independent, such as Carrefour~\cite{Dashti:2013:TMH:2451116.2451157}. More importantly, they cannot achieve the optimal performance due to the reactive approach that only migrates a task or memory pages when something is wrong. For instance, if multiple threads access objects that are located in the same page, the page placement may not offer much benefit~\cite{Gaud:2014:LPM:2643634.2643659}. 
+Second, some researchers propose the method of migrating tasks or physical pages reactively, in order to achieve the better performance~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. The migration will be based on memory access patterns, or other hardware characteristics. However, some of these approaches are not architecture or OS independent, such as Carrefour~\cite{Dashti:2013:TMH:2451116.2451157}. More importantly, they cannot achieve the optimal performance due to \textbf{their reactive approaches} that only migrate a task or memory pages whenever contention. However, the migration  will require additional overhead. Also, some issues cannot be solved by the reactive approach. For instance, if multiple threads access objects that are located in the same page, the page placement may not offer much benefit~\cite{Gaud:2014:LPM:2643634.2643659}. 
 
 
 Third, some researchers focus on the memory management by providing a new memory manager for existing software~\cite{}. 
