--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -31,6 +31,26 @@
  address = {Berkeley, CA, USA},
 } 
 
+@inproceedings{diener2015locality,
+  title={Locality vs. Balance: Exploring data mapping policies on NUMA systems},
+  author={Diener, Matthias and Cruz, Eduardo HM and Navaux, Philippe OA},
+  booktitle={2015 23rd Euromicro International Conference on Parallel, Distributed, and Network-Based Processing},
+  pages={9--16},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{lameter2013numa,
+  title={Numa (non-uniform memory access): An overview},
+  author={Lameter, Christoph},
+  journal={Queue},
+  volume={11},
+  number={7},
+  pages={40--51},
+  year={2013},
+  publisher={ACM New York, NY, USA}
+}
+
 
 @inproceedings{Dashti:2013:TMH:2451116.2451157,
  author = {Dashti, Mohammad and Fedorova, Alexandra and Funston, Justin and Gaud, Fabien and Lachaize, Renaud and Lepers, Baptiste and Quema, Vivien and Roth, Mark},
